# lighttpd2

./: .bzrignore  .flake8  .gitignore  CMakeLists.txt  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  diff-dist-git.sh  meson.build  meson_options.txt  packdist.sh  pyproject.toml  ragel.py  waf  wscript
.github/workflows/: ci-alpine.yml  ci-linux.yml  ci-macos.yml
build-helpers/: glib-tap.mk  tap-driver.sh
cmake/: FindLibEV.cmake  FindRagel.cmake  LighttpdMacros.cmake
contrib/: Makefile.am  angel.conf  core.lua  core__cached_html.lua  core__xsendfile.lua  create-mimetypes.conf.pl  default.html  lighttpd.conf  meson.build  mimetypes.conf  secdownload.lua
contrib/service/: run
contrib/systemd/: lighttpd2.service
doc/: Makefile.am  angel.conf  compile.rb  core.lua  core__cached_html.lua  core__xsendfile.lua  core_config.xml  core_config_angel.xml  core_fetch.xml  core_introduction.xml  core_lua.xml  core_pattern.xml  core_regex.xml  doc_schema.xsd  lighttpd.conf  lighttpd2-angel.8  lighttpd2-worker.8  lighttpd2.1  lighttpd2.8  meson.build  mimetypes.conf  mod_access.xml  mod_accesslog.xml  mod_auth.xml  mod_balance.xml  mod_cache_disk_etag.xml  mod_core.lua.xml  mod_debug.xml  mod_deflate.xml  mod_dirlist.xml  mod_expire.xml  mod_fastcgi.xml  mod_flv.xml  mod_fortune.xml  mod_gnutls.xml  mod_limit.xml  mod_lua.xml  mod_memcached.xml  mod_openssl.xml  mod_progress.xml  (+13 more)
doc/service/: run
doc/service/log/: run
include/: Makefile.am  meson.build
include/lighttpd/: Makefile.am  actions.h  actions_lua.h  angel.h  angel_base.h  angel_config_parser.h  angel_connection.h  angel_data.h  angel_log.h  angel_plugin.h  angel_plugin_core.h  angel_proc.h  angel_server.h  angel_typedefs.h  angel_value.h  backends.h  base.h  base_lua.h  buffer.h  chunk.h  chunk_parser.h  collect.h  condition.h  condition_lua.h  config_lua.h  config_parser.h  connection.h  core_lua.h  encoding.h  environment.h  etag.h  events.h  fetch.h  filter.h  filter_buffer_on_disk.h  filter_chunked.h  hedley.h  http_headers.h  http_range_parser.h  http_request_parser.h  (+44 more)
src/: CMakeLists.txt  Makefile.am  actions.c  actions.h  actions_lua.c  actions_lua.h  angel.c  angel.h  angel_config_parser.rl  angel_connection.c  angel_data.c  angel_fake.c  angel_log.c  angel_main.c  angel_plugin.c  angel_plugin_core.c  angel_server.c  angel_value.c  base.c  base.h  chunk.c  chunk.h  chunk_parser.c  chunk_parser.h  chunks.c  chunks.h  collect.c  collect.h  condition.c  condition.h  condition_lua.c  condition_lua.h  condition_parsers.rl  config.h.cmake  config_lua.c  config_lua.h  config_parser.h  config_parser.rl  connection.c  connection.h  (+68 more)
src/angel/: Makefile.am  angel_config_parser.rl  angel_log.c  angel_main.c  angel_plugin.c  angel_plugin_core.c  angel_proc.c  angel_server.c  angel_value.c  meson.build  wscript
src/common/: Makefile.am  angel_connection.c  angel_data.c  buffer.c  encoding.c  events.c  fetch.c  idlist.c  ip_parsers.rl  jobqueue.c  memcached.c  mempool.c  meson.build  module.c  profiler.c  radix.c  sys_memory.c  sys_socket.c  tasklet.c  utils.c  value.c  value_impl.c  waitqueue.c  wscript
src/main/: Makefile.am  actions.c  actions_lua.c  angel.c  angel_fake.c  backends.c  base_lua.c  chunk.c  chunk_lua.c  chunk_parser.c  collect.c  condition.c  condition_lua.c  config_lua.c  config_parser.rl  connection.c  connection_http.c  connection_lua.c  connection_tcp.c  core_lua.c  environment.c  environment_lua.c  etag.c  filter.c  filter_buffer_on_disk.c  filter_chunked.c  filters_lua.c  http_headers.c  http_headers_lua.c  http_range_parser.rl  http_request_parser.rl  http_response_parser.rl  lighttpd-glue.c  lighttpd.c  lighttpd_glue.c  lighttpd_worker.c  log.c  meson.build  mimetype.c  network.c  (+30 more)
src/modules/: Makefile.am  fastcgi_stream.c  fastcgi_stream.h  gnutls_filter.c  gnutls_filter.h  gnutls_ocsp.c  gnutls_ocsp.h  meson.build  mod_access.c  mod_accesslog.c  mod_auth.c  mod_balance.c  mod_balancer.c  mod_cache_disk_etag.c  mod_debug.c  mod_deflate.c  mod_dirlist.c  mod_expire.c  mod_fastcgi.c  mod_flv.c  mod_fortune.c  mod_gnutls.c  mod_limit.c  mod_lua.c  mod_memcached.c  mod_openssl.c  mod_progress.c  mod_proxy.c  mod_redirect.c  mod_rewrite.c  mod_scgi.c  mod_status.c  mod_throttle.c  mod_userdir.c  mod_vhost.c  openssl_filter.c  openssl_filter.h  ssl-session-db.h  ssl_client_hello_parser.h  ssl_sni_parser.h  (+1 more)
src/unittests/: Makefile.am  meson.build  test-chunk.c  test-http-request-parser.c  test-ip-parser.c  test-radix.c  test-range-parser.c  test-utils.c
tests/: .gitignore  CMakeLists.txt  CONTRIBUTE.md  Makefile.am  autowrapper.sh  base.py  logfile.py  meson.build  requests.py  run-fcgi-cgi.py  run-memcached.py  run-scgi-envcheck.py  runtests.py  service.py  t-alias.py  t-basic-docroot.py  t-basic-gets.py  t-cgi.py  t-deflate.py  t-dirlist.py  t-env-set.py  t-etag.py  t-gnutls.py  t-header-modify.py  t-memcached.py  t-mime-type.py  t-mod-auth.py  t-mod-lua.py  t-mod-proxy.py  t-openssl.py  t-redirect.py  t-rewrite.py  t-scgi.py  t-secdownload.py
tests/ca/: ca.conf  ca.crt  ca.key  ca.pub  ca.srl  ca.template  client1.crt  client1.key  client1.pub  client1.template  client_ca.crt  client_ca.key  client_ca.pub  client_ca.template  createca.sh  intermediate.conf  intermediate.crt  intermediate.key  intermediate.pub  intermediate.template  server.key  server.pub  server_test1.ssl.conf  server_test1.ssl.crt  server_test1.ssl.pem  server_test1.ssl.template  server_test2.ssl.conf  server_test2.ssl.crt  server_test2.ssl.pem  server_test2.ssl.template
tests/pylt/: base.py  fastcgi.py  logfile.py  requests.py  run.py  service.py
tests/pylt/tests/: t-alias.py  t-basic-docroot.py  t-basic-gets.py  t-cgi.py  t-deflate.py  t-dirlist.py  t-env-set.py  t-etag.py  t-gnutls.py  t-header-modify.py  t-lua.py  t-map-cidr.py  t-memcached.py  t-mime-type.py  t-mod-auth.py  t-mod-lua.py  t-mod-proxy.py  t-openssl.py  t-redirect.py  t-rewrite.py  t-scgi.py  t-secdownload.py
